k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-app
  labels:
    app: inventory-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inventory-app
  template:
    metadata:
      labels:
        app: inventory-app
    spec:
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: inventory-app
          image: ghcr.io/nikitaks97/inventoryapp:$IMAGE_TAG
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data-volume
              mountPath: /home/node/app/data
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
              ephemeral-storage: "512Mi"
            limits:
              memory: "512Mi"
              cpu: "500m"
              ephemeral-storage: "1Gi"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
      volumes:
        - name: data-volume
          emptyDir: {}
